  - Renamed "show_vehicle_in_garage_for_race" option to "show_vehicle_in_garage" in Relative Widget,
    which now affects all sessions. Default is "False", which hides vehicles in garage.
    Note, local player (user) is always displayed.

* Gear Widget
  - Add "show_inverted_battery" & "show_inverted_rpm" options that invert battery or rpm bar progression.

* [New]Tyre inner layer Widget, Tyre temperature Widget
  - Separated inner layer temperature display from "Tyre temperature Widget" into the new
    "Tyre inner layer Widget" (requested by H4dro), which can now be configured completely separately.
    Tip: set color style differently to easier distinguish the two widgets.
  - Add "horizontal_gap", "vertical_gap" options for enhanced arrangement (requested by doublebidule).

2.20.1 (2024-11-24)
-----------------------------
* Pace Notes Playback
  - Default "playback" option is now set on "disabled" for new presets.
    User may click "Disabled Playback" button from "Pace Notes" tab to enable playback.
  - Adjusting playback volume now takes immediate effect.

* Pace notes Widget, Track notes Widget
  - Add "enable_comments_line_break" option (requested by DanRZ) for enabling multi-line comments display.
    Note, a note comment can be broken into multiple lines by adding "\n" to any part of
    the comment in Track Notes Editor.
  - Add "maximum_display_duration" option (requested by DanRZ), which sets maximum display duration (seconds)
    of each note. Set to "-1" to always display notes. Default is "-1".

* Notes Module
  - "Global offset" option from "Pace Notes" tab no longer affects "track notes".
  - Fixed position desync issue that would occasionally trigger previous note again.

2.20.0 (2024-11-17)
-----------------------------
* General
  - [New]Implemented track & pace notes system, which allows load & save track & pace notes files.
  - Add "pace_notes_path" & "track_notes_path" options to global user config file.