@@ -1780,6 +1780,38 @@ WIDGET_DEFAULT = {
         "scale_mark_degree": 90,
         "scale_mark_color": "#555555",
     },
+    "steering_wheel": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 1050,
+        "position_y": 620,
+        "opacity": 0.9,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "enable_auto_font_offset": True,
+        "font_offset_vertical": 0,
+        "show_custom_steering_wheel": False,
+        "custom_steering_wheel_image_file": "",
+        "display_size": 80,
+        "display_margin": 4,
+        "show_background": False,
+        "bkg_color": "#88111111",
+        "show_circle_background": True,
+        "bkg_color_circle": "#88111111",
+        "show_steering_angle": False,
+        "steering_angle_offset_x": 0.5,
+        "steering_angle_offset_y": 0.5,
+        "font_color_steering_angle": "#FFFFFF",
+        "show_degree_sign": True,
+        "decimal_places": 0,
+        "manual_steering_range": 0,
+        "show_rotation_line": True,
+        "show_rotation_line_while_stationary_only": True,
+        "rotation_line_color": "#DD2200",
+        "rotation_line_width": 3,
+        "rotation_line_margin": 2,
+    },
     "stint_history": {
         "enable": True,
         "update_interval": 20,
@@ -2112,7 +2144,7 @@ WIDGET_DEFAULT = {
         "enable": True,
         "update_interval": 20,
         "position_x": 249,
-        "position_y": 525,
+        "position_y": 563,
         "opacity": 0.9,
         "font_name": "Consolas",
         "font_size": 15,
